# SFF

./: README.md
SaccaniFormFiller/: ACCOUNTS.numbers  Dockerfile  gui.py  main.py  pdf_filler.py  pdf_filler2.py  requirements.txt  scraper.py
SaccaniFormFiller/Account list/: ACCOUNTS.csv  ACCOUNTS.numbers  Cleaned_Larger_Account_List.csv  Cleaned_Larger_Account_List.nmbtemplate  Cleaned_Larger_Account_List.numbers  ROUTE 2 COVER SHEETS 2023 (1).xlsx - Rt.2 Monday 2.csv  ROUTE 2 COVER SHEETS 2023 (1).xlsx - Rt.2 Monday 2.numbers  ROUTE 2 COVER SHEETS 2023 (1).xlsx - Rt.2 Monday.csv  ROUTE 2 COVER SHEETS 2023 (1).xlsx - Rt.2 Monday.numbers  account_list.csv  rolodex_saccani.numbers
sff_backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt  test.csv  test_data.csv  test_data_comprehensive.csv
sff_backend/app/: main.py  scraper.py
sff_backend/deploy/: entrypoint.sh  pyproject.toml  requirements.txt  start.sh
sff_backend/deploy/app/: main.py  models.py
sff_frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.mjs  test.csv  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
sff_frontend/src/: App.tsx  index.css
sff_frontend/src/components/: AdditionalInfoTab.tsx  FileSelectionTab.tsx  LogTab.tsx  ManualEntryTab.tsx
sff_frontend/src/context/: LogContext.tsx
sff_frontend/src/hooks/: useFileUpload.ts  useForm.ts  useLog.ts
sff_frontend/src/lib/: utils.ts
sff_frontend/src/lib/api/: client.ts  types.ts
sff_frontend/src/types/: index.ts
