[tool.poetry]
name = "sff-backend"
version = "0.1.0"
description = "Saccani Form Filler Backend"
authors = ["Devin"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pdfrw = "^0.4"
reportlab = "^4.2.5"
PyPDF2 = "^3.0.1"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
